frontend/src/assets/index.css
/* ... */
.searchWindow input::placeholder,
.searchWindow input::placeholder {
    color: rgba(255, 255, 255, 0.7);
}

.results {
    margin-top: 20px;
    max-height: calc(100vh - 200px);
    overflow: scroll;
    scrollbar-width: none;
}

.city {
    color: rgba(255, 255, 255, 0.7);
    transition: all 0.5s;
    cursor: pointer;
    margin: 10px;
}

.city:hover {
    color: #FFF;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
    font-size: 18px;
}

.no-results {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.no-results p {
    color: rgba(255, 255, 255, 0.7);
}

.dailyForecast {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.dailyForecast .day {
    width: 70px;
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}

.dailyForecast img {
    width: 50px;
    height: 50px;
}

.dailyForecast .day-temp {
    width: 35px;
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
    text-align: center;
}

.dailyForecast span {
    color: rgba(255, 255, 255, 0.7);
    font-size: 12px;
}

.additionalDataItem {
    background: rgba(128, 128, 128, 0.3);
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(100px);
    border-radius: 40px;
    padding: 30px;
    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.45);
    border: 1px solid rgba(255, 255, 255, .3);
    height: fit-content;
    margin: 10px;
    width: 240px;
}

.additionalDataValue {
    font-size: 25px;
    font-family: InterBold;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5)
}

.additionalDataExplanation {
    margin-top: 10px;
    color: rgba(255, 255, 255, 0.7);
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}

.col-lg {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    width: 100%;
}

.col-sm {
    width: 100%;
    max-width: 450px;
    margin: 10px 20px 10px 0px;
}

.alert {
    display: flex;
    background: rgba(128, 128, 128, 0.3);
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(100px);
    border-radius: 40px;
    padding: 30px;
    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.45);
    border: 1px solid rgba(255, 255, 255, .3);
    height: fit-content;
    margin: 0px 0px 25px 0px;
    cursor: pointer;
    transition: all 0.5s;
}

.alert:hover {
    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.65);
}

.alert .icon {
    margin-right: 10px;
}

.alert svg {
    height: 25px;
    width: 25px;
    color: #FFDD00;
}

.alert-name {
    font-family: InterBold;
}

.alert-desc {
    color: rgba(255, 255, 255, 0.7);
    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}

.location-window {
    position: fixed;
    z-index: 20;
    bottom: 0px;
    width: calc(100% - 40px);
    max-height: 80%;
    padding: 20px;
    background: rgba(128, 128, 128, 0.3);
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(100px);
    border-top-left-radius: 40px;
    border-top-right-radius: 40px;
    box-shadow: 0px -2px 140px rgba(0, 0, 0, 0.75);
    overflow: scroll;
    scrollbar-width: none;
    animation: slide-in-preview 1s ease-in-out;
    transition: all 1s;
}

.location-window.hidden {
    bottom: -200vh;
}

.location-window::-webkit-scrollbar {
    display: none;
}

button.closePreview {
    margin-right: 50px;
    background-color: #FF0000;
    padding: unset;
    height: 35px;
    width: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
    transition: all 0.5s;
}

button.closePreview:hover {
    transform: rotate(180deg);
}

.saved-locations {
    position: fixed;
    top: 20px;
    left: 20px;
    width: 100%;
    max-width: 300px;
    height: calc(100vh - 80px);
    z-index: 10;
    padding: 20px;
    background: rgba(128, 128, 128, 0.3);
    backdrop-filter: blur(100px);
    -webkit-backdrop-filter: blur(100px);
    border-radius: 40px;
    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.3);
    border: 1px solid rgba(255, 255, 255, .3);
    animation: slide-in-from-side 1s ease-in-out;
    transition: all 1s;
}

@keyframes slide-in-from-side {
    0% {
        left: -200vh;
    }

    100% {
        left: 20px;
    }
}

@keyframes slide-in-preview {
    0% {
        bottom: -200vh;
    }

    100% {
        bottom: 0px;
    }
}

.saved-loc {
    font-size: 18px;
    cursor: pointer;
    transition: all 0.5s;
    margin: 15px;
}

.saved-loc:hover {
    font-size: 20px;
}

.saved-loc .country {
    color: rgba(255, 255, 255, .7);
}

.remove {
    padding: 0px;
    position: absolute;
    top: 3px;
    right: 0px;
    background-color: #FFF;
    border: 1px solid #FF0000;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
    opacity: 0;
    transition: all 1s;
}

.loc-container {
    position: relative;
}

.loc-container:hover .remove {
    opacity: 1;
}

.remove svg {
    color: #FF0000;
}

.saved-locations p {
    text-align: center;
    color: rgba(255, 255, 255, .7);
    margin-top: 40px;
}

.saved-locations.hidden {
    left: -200vh;
}

.saveIcon {
    display: none;
}

footer {
    display: flex;
    justify-content: center;
}

.github {
    display: flex;
    align-items: center;
    text-decoration: none;
    margin: 30px 10px;
}

.github img {
    height: 100px;
    width: 100px;
    border-radius: 100px;
    margin-right: 20px;
}

.github .name {
    font-size: 22px;
    font-family: InterBold;
    color: #FFF;
    margin-bottom: 5px;
}
.github .position {
    color: rgba(255, 255, 255, .7);
}
/* ... */

